<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">SmartTimer</string>
    <string name="add">Add</string>
    <string name="title_daily">Daily Schedule</string>
    <string name="task1">8:00 - 10:00 Get up and Breakfast</string>
    <string name="task2">13:01 - 15:00 Test Tutorial</string>
    <string name="task3">15:00 - 17:00 ISYS3400 Tutorial</string>
    <string name="task4">20:00 - 23:00 Dinner Chicken</string>
    <string name="new_event">New Event</string>
    <string name="edit_title">Title</string>
    <string name="edit_location">Location</string>
    <string name="edit_URL">URL</string>
    <string name="edit_notes">Notes</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_summary">Summary</string>
    <string name="title_me">Me</string>
    <string name="time_span">Time Span</string>
    <string name="used">Used:</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage statistics. You may need to enable access for this app through Setting > Security > Apps with usage access</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
