<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.co2017gmail.bilibili.smarttimer.CreateFragment">


    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.co2017gmail.bilibili.smarttimer.createNew">


        <TextView
            android:id="@+id/event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textColor="@color/black"
            android:text="@string/new_event"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_title"
            android:layout_below="@+id/event"
            />

        <EditText
            android:id="@+id/edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_location"
            android:layout_below="@id/edit_title"
            />

        <TextView
            android:id="@+id/all_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="All-Day"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_below="@id/edit_location"
            />

        <Switch
            android:id="@+id/switch_all_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_alignBottom="@+id/all_day"
            android:layout_alignParentEnd="true" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/switch_all_day"
            />

        <TextView
            android:id="@+id/starts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="Starts"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_below="@id/line"
            />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/starts"
            />

        <TextView
            android:id="@+id/ends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="Ends"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_below="@id/line1"
            />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/ends"
            />

        <TextView
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="Repeat"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_below="@id/line2"
            />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/repeat"
            />

        <EditText
            android:id="@+id/edit_URL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_URL"
            android:layout_marginTop="20dp"
            android:layout_below="@id/repeat"
            />

        <EditText
            android:id="@+id/edit_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_notes"
            android:layout_below="@id/edit_URL"
            />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_below="@id/edit_notes"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="180dp"

            />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:layout_below="@id/edit_notes"
            android:layout_toRightOf="@id/cancel"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="100dp"

            />

    </RelativeLayout>


</FrameLayout>
