<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.co2017gmail.bilibili.smarttimer.ScheduleFragment">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:design="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                tools:context="com.co2017gmail.bilibili.smarttimer.home_screen"
                >

                <TextView
                    android:id="@+id/title_shedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/title_daily"
                    android:textSize="32dp"
                    android:textColor="@color/blue"
                    />

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_add"
                    android:onClick="create_new"
                    android:layout_toRightOf = "@id/title_shedule"
                    />

                <CheckBox
                    android:id="@+id/checkbox_task1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight = "true"
                    android:text="@string/task1"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onCheckboxClicked"
                    android:buttonTint="@color/blue"
                    android:layout_below="@id/add_button"
                    />
                <CheckBox
                    android:id="@+id/checkbox_task2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/task2"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onCheckboxClicked"
                    android:layout_below="@id/checkbox_task1"
                    />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#000000"
                    android:layout_below="@id/checkbox_task2"
                    />

                <CheckBox
                    android:id="@+id/checkbox_task3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/task2"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onCheckboxClicked"
                    android:layout_below="@id/line"
                    />


                <CheckBox
                    android:id="@+id/checkbox_task4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onCheckboxClicked"
                    android:paddingRight="5dp"
                    android:text="@string/task2"
                    android:layout_below="@id/checkbox_task3"
                    />

                <android.support.design.widget.BottomNavigationView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/BottomNavigation"
                    android:layout_alignParentBottom="true"
                    design:menu="@menu/menu_bottomnavigation"
                    />
            </RelativeLayout>
        </TableLayout>
    </ScrollView>





</FrameLayout>
